fix navbar button alignment

--- a/public/style.css
+++ b/public/style.css
@@ -568,6 +568,10 @@ filter: grayscale(100%);
   margin-left: 8px;
 }
 
+.navbar-nav .btn-primary {
+    padding: 6px 12px;
+    font-size: 12px;
+    height: 36px;
 }
 
 }
